# fibbot

./: Cargo.toml  Dockerfile  README.md  Readme.md  action.yml  extract numbers
.github/workflows/: action.yml  cli.yml
src/: Readme.md  fib.rs  fib_calculator.rs  main.rs  number.rs  post.rs  pull_request  pull_request.rs
