[package]
name = "fibbot"
version = "0.1.0"
edition = "2021"

[dependencies]


reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

octocrab = "0.43.0"
num-bigint = "0.4.6"
anyhow = "1.0"
thiserror = "2.0.11"
#snafu = "1.0"
snafu = { version = "0.8.5" }
